feat: "Hi brown" 얼럿을 누르면 갈색 뷰가 나오도록 구현

--- a/PracticeUserNotification/Base.lproj/Main.storyboard
+++ b/PracticeUserNotification/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <segue destination="3Yo-3o-9Sk" kind="show" id="dLq-de-dyl"/>
+                                    <segue destination="3Yo-3o-9Sk" kind="show" identifier="brown" id="dLq-de-dyl"/>
                                 </connections>
                             </button>
                         </subviews>
